# MatchOfflineRenderer

./: CMakeLists.txt  README.md  大纲.txt
MatchOfflineRenderer/: CMakeLists.txt
MatchOfflineRenderer/include/MatchOfflineRenderer/: MatchOfflineRenderer.hpp  commons.hpp
MatchOfflineRenderer/include/MatchOfflineRenderer/camera/: camera.hpp  camera_base.hpp  film.hpp  image.hpp  specified_camera.hpp
MatchOfflineRenderer/include/MatchOfflineRenderer/core/: loader.hpp  logger.hpp
MatchOfflineRenderer/include/MatchOfflineRenderer/math/: bounds.hpp  interaction.hpp  interval.hpp  math.hpp  matrix.hpp  normal.hpp  point.hpp  ray.hpp  sphere.hpp  transform.hpp  tuple.hpp  types.hpp  vector.hpp
MatchOfflineRenderer/include/MatchOfflineRenderer/sample/: filter.hpp  sample_unit_disk.hpp
MatchOfflineRenderer/include/MatchOfflineRenderer/shape/: shape_base.hpp
MatchOfflineRenderer/include/MatchOfflineRenderer/spectra/: blackbody.hpp  cie_constants.hpp  color.hpp  colorspace.hpp  constants.hpp  loader.hpp  rgb_convert.hpp  rgb_convert_types.hpp  rgb_spectrum.hpp  specified_spectrum.hpp  spectra.hpp  spectrum.hpp
MatchOfflineRenderer/src/MatchOfflineRenderer/: main.cpp
MatchOfflineRenderer/src/MatchOfflineRenderer/camera/: film.cpp
MatchOfflineRenderer/src/MatchOfflineRenderer/core/: loader.cpp  logger.cpp
MatchOfflineRenderer/src/MatchOfflineRenderer/spectra/: compute_rgb_to_spectrum_coeffients.cpp  loader.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
